org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/ShadowingTests_SameNamesBadCase.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/

package test{
	class A{
		class a1{}
	}
	class B specializes A{
		class A{
			class a2{}
		}
		// XPECT errors ---> "Couldn't resolve reference to Class 'A::a1'." at "A::a1"
		class b specializes A::a1{}
	}
}
