org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/ParsingTests_CircleProblem5.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
		File {from ="DependencyOuterPackage.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
				File {from ="DependencyOuterPackage.alf"}
			}
		}
	}
END_SETUP 
*/

package Test1{
	class A specializes D{
		// XPECT errors ---> "Couldn't resolve reference to Class 'C'." at "C"
		class B specializes C{}
	}
	class C specializes A{}
	class D specializes A.B{}
}
